Fixed an issue with the navbar on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -46,6 +46,7 @@ body {
   flex-direction: column;
   font-size: 2rem;
   gap: 2rem;
+  text-align: center;
 }
 
 .contactparagraph {
